Updating to JBoss AS 6 Final and removing AS 5.x stuff